--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Eduardogthom/CLEAN-NODE-API/issues"
   },
-  "homepage": "https://github.com/Eduardogthom/CLEAN-NODE-API#readme"
+  "homepage": "https://github.com/Eduardogthom/CLEAN-NODE-API#readme",
+  "dependencies": {
+    "git-commit-msg-linter": "^3.1.0"
+  }
 }
