--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/Eduardogthom/CLEAN-NODE-API#readme",
   "dependencies": {
     "git-commit-msg-linter": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^15.0.1",
+    "typescript": "^4.2.4"
   }
 }
